Fixed Overflow Issues on both pages, and rearranged some stuff.

--- a/nocap3D.css
+++ b/nocap3D.css
@@ -6,9 +6,18 @@
 #00C8E7
 */
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 body {
     margin: 0px;
-    overflow: auto;
+    overflow-x: hidden;
     background: black;
 }
 
